# data_registry

./: .clangd  .gitmodules  .mkdocs.yml  .treefmt.toml  CMakeLists.txt  README.md  latest  mkdocs.yml  requirements.txt  versions.json
.github/workflows/: docs.yml  formatting.yml  lint.yml  linux.yml
c815f42/: 404.html  index.html
c815f42/search/: search_index.json
docs/: data_registry.css  index.md
examples/: CMakeLists.txt
examples/statics/: CMakeLists.txt
examples/statics/src/: main.cpp
include/data/: registry.h
test/: CMakeLists.txt
test/src/: crvalue_accessor.cpp  demo.cpp  stored_crvalue_accessor.cpp  stored_crvalue_accessor.h  stored_demo.h
tests/: CMakeLists.txt  entries_generator.py  raw_statics_generator.py  size_comparator.py
tests/src/: size_registry.cpp  size_statics.cpp  stored_crvalue_accessor.cpp  stored_crvalue_accessor.h  stored_data.cpp  stored_data.h  stored_demo.cpp  tests.cpp
